# embdebug-target-core-v

./: CMakeLists.txt
